--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.3'
+    id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -21,10 +21,12 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'    //내장된 tomcat에 jsp 처리서블릿 시켜줌
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // JPA
 
-    implementation group: 'org.apache.tiles', name: 'tiles-jsp', version: '3.0.5' //tiles 레이아웃
+    implementation 'org.apache.tiles:tiles-jsp:3.0.8'
+    implementation 'org.apache.tiles:tiles-core:3.0.8'
+    implementation 'org.apache.tiles:tiles-servlet:3.0.8'
+    implementation 'javax.servlet:jstl'
 
-
-    runtimeOnly 'com.mysql:mysql-connector-j'   //mysql 연결
+    runtimeOnly 'mysql:mysql-connector-java'   //mysql 연결
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
