--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    compileOnly "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4"// mybatis - xml에 작성쿼리 자바객체연결해주는 역활
+    implementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+
 }
 
 tasks.named('test') {
